drtest/base/deploymentconfig_apps.openshift.io_v1_rails-pgsql-persistent.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    description: Defines how to deploy the application server
    openshift.io/generated-by: OpenShiftNewApp
    template.alpha.openshift.io/wait-for-ready: 'true'
  generation: 2
  labels:
    app: rails-pgsql-persistent
    template: rails-pgsql-persistent
  name: rails-pgsql-persistent
  namespace: drtest
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    name: rails-pgsql-persistent
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      pre:
        execNewPod:
          command:
          - ./migrate-database.sh
          containerName: rails-pgsql-persistent
        failurePolicy: Abort
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        name: rails-pgsql-persistent
      name: rails-pgsql-persistent
    spec:
      containers:
      - env:
        - name: DATABASE_SERVICE_NAME
          value: postgresql
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: rails-pgsql-persistent
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: rails-pgsql-persistent
        - name: SECRET_KEY_BASE
          valueFrom:
            secretKeyRef:
              key: keybase
              name: rails-pgsql-persistent
        - name: POSTGRESQL_DATABASE
          value: root
        - name: POSTGRESQL_MAX_CONNECTIONS
          value: '100'
        - name: POSTGRESQL_SHARED_BUFFERS
          value: 12MB
        - name: APPLICATION_DOMAIN
        - name: APPLICATION_USER
          valueFrom:
            secretKeyRef:
              key: application-user
              name: rails-pgsql-persistent
        - name: APPLICATION_PASSWORD
          valueFrom:
            secretKeyRef:
              key: application-password
              name: rails-pgsql-persistent
        - name: RAILS_ENV
          value: production
        image: image-registry.openshift-image-registry.svc:5000/drtest/rails-pgsql-persistent@sha256:543b596409597fd9589067abdf1ea005421b17d2d03f518db257345d83686acb
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /articles
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        name: rails-pgsql-persistent
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /articles
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - rails-pgsql-persistent
      from:
        kind: ImageStreamTag
        name: rails-pgsql-persistent:latest
        namespace: drtest
      lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/drtest/rails-pgsql-persistent@sha256:543b596409597fd9589067abdf1ea005421b17d2d03f518db257345d83686acb
    type: ImageChange
  - type: ConfigChange
