drtest/base/service_v1_postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes the database server
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: rails-pgsql-persistent
    template: rails-pgsql-persistent
  name: postgresql
  namespace: drtest
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgresql
  sessionAffinity: None
  type: ClusterIP
