drtest/base/service_v1_rails-pgsql-persistent.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
    openshift.io/generated-by: OpenShiftNewApp
    service.alpha.openshift.io/dependencies: '[{"name": "postgresql", "kind": "Service"}]'
  labels:
    app: rails-pgsql-persistent
    template: rails-pgsql-persistent
  name: rails-pgsql-persistent
  namespace: drtest
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: rails-pgsql-persistent
  sessionAffinity: None
  type: ClusterIP
