drtest/base/route_route.openshift.io_v1_rails-pgsql-persistent.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    openshift.io/host.generated: 'true'
  labels:
    app: rails-pgsql-persistent
    template: rails-pgsql-persistent
  name: rails-pgsql-persistent
  namespace: drtest
spec:
  host: rails-pgsql-persistent-drtest.apps.openshift.lplab.online
  to:
    kind: Service
    name: rails-pgsql-persistent
    weight: 100
  wildcardPolicy: None
